--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nativescript-vue-shadow",
-  "version": "0.1.0",
+  "name": "nativescript-vue-shadow-ns-7",
+  "version": "10.1.0",
   "description": "Nativescript-Vue Shadow Plugin",
-  "main": "dist/nativescript-vue-shadow.umd.js",
-  "module": "dist/nativescript-vue-shadow.esm.js",
-  "unpkg": "dist/nativescript-vue-shadow.js",
+  "main": "dist/nativescript-vue-shadow-ns-7.umd.js",
+  "module": "dist/nativescript-vue-shadow-ns-7.esm.js",
+  "unpkg": "dist/nativescript-vue-shadow-ns-7.js",
   "files": [
     "dist/*",
     "src/*",
@@ -29,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jawa-the-hutt/nativescript-vue-shadow.git"
+    "url": "git+https://github.com/romandragan/nativescript-vue-shadow-ns-7.git"
   },
   "keywords": [
     "vue",
@@ -39,12 +39,12 @@
     "code share",
     "shadow"
   ],
-  "author": "Gary Gambill",
+  "author": "Roman Dragan",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jawa-the-hutt/nativescript-vue-shadow/issues"
+    "url": "https://github.com/romandragan/nativescript-vue-shadow-ns-7/issues"
   },
-  "homepage": "https://github.com/jawa-the-hutt/nativescript-vue-shadow#readme",
+  "homepage": "https://github.com/romandragan/nativescript-vue-shadow-ns-7#readme",
   "dependencies": {
     "nativescript-theme-core": "~1.0.4"
   },
@@ -53,6 +53,8 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@nativescript/core": "~7.0.0",
+    "@nativescript/types": "~7.0.0",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.4",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
@@ -81,7 +83,6 @@
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-typescript2": "^0.20.1",
     "rollup-plugin-vue": "^5.0.0",
-    "tns-core-modules": "^5.3.1",
     "ts-jest": "^24.0.2",
     "typescript": "^3.4.3",
     "vue": "^2.6.10",
